# fastapi-arch

./: .env  .gitignore  README.md  pyproject.toml  run.sh  test.sh
app/: deps.py  main.py
app/core/: __init__.py  scheduler.py  seed.py  seeder.py
app/cruds/: base.py  robot.py
app/infra/: database.py
app/infra/database/: database.py
app/infra/notifier/: notifier.py
app/infrastructure/notifier/: notifier.py  websocket.py
app/internal/: database.py  deps.py
app/internal/core/: __init__.py  config.py  environment.py  scheduler.py  seeder.py
app/internal/cruds/: robot.py
app/internal/models/: base.py  robot.py
app/internal/repositories/: __init__.py  base.py  robot.py
app/internal/routers/: __init__.py  websocket.py
app/internal/routers/api/: __init__.py  robot.py
app/internal/schemas/: robot.py
app/internal/usecases/: __init__.py  robot.py
app/models/: __init__.py  base.py  robot.py
app/routers/: __init__.py  deps.py  websocket.py
app/routers/api/: __init__.py  robot.py
app/schemas/: __init__.py  robot.py
app/usecases/: __init__.py  robot.py
tests/internal/routers/api/: test_robot.py
